; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/firewire/extr_firedtv-1394.c_node_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/firewire/extr_firedtv-1394.c_node_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.firedtv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.firedtv*, i32, i8*, i64)* @node_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @node_write(%struct.firedtv* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.firedtv*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.firedtv* %0, %struct.firedtv** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.firedtv*, %struct.firedtv** %5, align 8
  %10 = call i32 @node_of(%struct.firedtv* %9)
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call i32 @hpsb_node_write(i32 %10, i32 %11, i8* %12, i64 %13)
  ret i32 %14
}

declare dso_local i32 @hpsb_node_write(i32, i32, i8*, i64) #1

declare dso_local i32 @node_of(%struct.firedtv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
